# paperless-backup

./: .dockerignore  .example.env  .gitignore  Dockerfile  README.md  config.toml  docker-compose.coolify.yml  docker-compose.yml  main.py  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  ci.yml  codeql.yml  renovate.json
.github/workflows/: ci.yml  codeql.yml  dev-build.yml  release.yml
app/backup/: archive.py  engine.py  exporter.py  runner.py  scheduler.py  utils.py
app/config/: loader.py  parsers.py  typed.py
app/retention/: __init__.py  base.py  executor.py  factory.py  parser.py
app/retention/policy/: daily.py  gfs.py  none.py  simple.py  time_based.py
app/storage/: __init__.py  base.py  checksum.py  factory.py  sftp_storage.py  ssh_client.py  upload.py
app/storage/sftp/: client.py  sftp_client.py  sftp_storage.py  ssh.py  storage.py
storage/: base.py  factory.py  sftp.py  sftp_client.py  sftp_storage.py
tests/: README.md  conftest.py  factories.py  test_checksum.py  test_config_loader.py  test_engine.py  test_parsers.py  test_retention_executor.py  test_retention_factory.py  test_retention_parser.py  test_retention_policies.py  test_storage_paths.py  test_upload.py
