[project]
name = "paperless-backup"
version = "0.1.0"
description = "paperless-backup is a Python application designed to automate the backup of Paperless data, including documents and metadata, to a remote SFTP server. It provides configurable backup intervals, retention policies, and secure handling of credentials through environment variables."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "paramiko>=4.0.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "freezegun>=1.5.5",
]

[tool.setuptools]
packages = ["app"]