[project]
name = "paperless-backup"
version = "1.0.0"
description = "Open-source lightweight backup tool for paperless-ngx"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "paramiko>=4.0.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "freezegun>=1.5.5",
]

[tool.setuptools]
packages = ["app"]